--- a/src/components/pages/UpdateUser/UpdateUser.css
+++ b/src/components/pages/UpdateUser/UpdateUser.css
@@ -51,10 +51,14 @@
     color: #b8b8b8;
   }
 .itens-dados-up{
-  background-color: #f2f2f2;
+  background-color: #f1efef;
   padding: 20px;
   border-radius: 15px;
   margin-top: 20px;
+  border-radius: 26px;
+  
+box-shadow:  8px 8px 9px #cecece,
+             -8px -8px 9px #f2f2f2;
 
 }
 .itens-dados-up h6{
@@ -82,8 +86,8 @@
   appearance: none;
   -webkit-appearance: none;
   -moz-appearance: none;
-  width: 16px;
-  height: 16px;
+  width: 18px;
+  height: 18px;
   border: 1px solid #464646;
   border-radius: 50%;
   margin-right: 5px;
@@ -113,7 +117,10 @@ font-weight: 100;
 margin-left: 5px;
 font-size: 10pt;
 }
-
+#tm-lb{
+  font-weight: 600;
+  font-size: 11pt;
+}
 .btn-up {
   padding: 1em 2em;
   border: none;
@@ -127,6 +134,7 @@ font-size: 10pt;
   position: relative;
   overflow: hidden;
   outline: 2px solid #2c9caf;
+  margin-bottom: 15px;
 }
 
 .btn-up:hover {
