--- a/src/components/Cards/cardsStyle.css
+++ b/src/components/Cards/cardsStyle.css
@@ -137,7 +137,7 @@ font-size: 10pt;
   height: 400px;
   border-radius: 20px;
   border-radius: 20px;
-  background: #faf9f9;
+  background: #fffdfd;
   box-shadow:  9px 9px 15px #c1c1c1,
                -9px -9px 15px #ffffff;
 
