Swap Book version 0.5, new section

--- a/src/components/Categorias/categorias.css
+++ b/src/components/Categorias/categorias.css
@@ -32,7 +32,7 @@ box-shadow:  6px 6px 12px #c5c5c5,
   transition: 1s;
 }
 .icons_cartegory:hover{
-  border:2px solid #008ECC;
+  border:2px solid #d5d3d308;
   transition: 1s;
 }
 
