--- a/src/components/Modal/Styles/ModalSecurity.css
+++ b/src/components/Modal/Styles/ModalSecurity.css
@@ -5,8 +5,8 @@
   }
   
   .modal-header {
-    background-color: #5bb2ec;
-    color: #fff;
+    background-color: #e6e5e5;
+    color: #010101;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
   }
