--- a/src/components/Cards/cardsStyle.css
+++ b/src/components/Cards/cardsStyle.css
@@ -91,8 +91,7 @@ font-size: 10pt;
     color: #000000;
     text-decoration: none;
     transition: 0.3s;
-    /* Add the following styles */
-    max-height: 3.6em; /* Adjust the value as needed to fit your design */
+    max-height: 3.6em; 
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
